--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 
             <div id="elem1" class="elem">
 
-                <img data-scroll data-scroll-speed="1" src="/img/image1.jpg" alt="image1">
+                <img data-scroll data-scroll-speed="1" src="img/image1.jpg" alt="image1">
      <div data-scroll data-scroll-speed="-1" class="dets">
 
      </div>
             </div>
             <div id="elem2" class="elem">
 
-                <img data-scroll data-scroll-speed="1" src="/img/image2.jpg" alt="image2">
+                <img data-scroll data-scroll-speed="1" src="img/image2.jpg" alt="image2">
              <div data-scroll data-scroll-speed="-1" class="dets">
 
              </div>
